--- a/master.css
+++ b/master.css
@@ -4,6 +4,13 @@ body{
     font-family: 'Lato' ,sans-serif;
     color: #505962;
 }
+.offset::before{
+    display: block;
+    content:"" ;
+    height: 4rem;
+    margin-top: -4rem;
+
+}
 /*--Navigation--*/
 .navbar{
     text-transform: uppercase;
@@ -57,4 +64,61 @@ body{
     border-radius: 0;
     padding: .6rem 1.3rem;
     font-size: 1.1rem;
+}
+/*----Course section--*/
+.narrow{
+    width: 75%;
+    margin: 1.5rem auto;
+    padding-top: 2rem;
+}
+.narrow h1{
+    font-size: 2.4rem;
+
+}
+.btn-secondary{
+    border-width: medium;
+    border-radius: 0;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    padding: .6rem 1.2rem;
+    margin: 1rem;
+    color: white;
+    background-color: #1ebba3;
+    border-color:#1ebba3;
+}
+.btn-secondary:hover{
+    background-color: #189582;
+    border-color:#189582;
+}
+/*----Features section--*/
+.jumbotron{
+    margin-bottom: 0;
+    padding: 2rem 0 3.5rem;
+    border-radius: 0;
+}
+h3.heading{
+    font-size: 1.9rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 1.9rem;
+
+}
+.heading-underline{
+    width: 3rem;
+    height: .2rem;
+    background-color: #1ebba3;
+    margin: 0 auto 2rem;
+}
+.feature svg.svg-inline--fa{
+    color: #1ebba3;
+}
+.feature h3{
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    padding-bottom: .4rem;
+
+}
+.feature p{
+    font-size: 1.1rem;
+
 }
