--- a/master.css
+++ b/master.css
@@ -122,3 +122,106 @@ h3.heading{
     font-size: 1.1rem;
 
 }
+/*----Resources section--*/
+.fixed{
+    background-image: url(img/apple.png);
+    z-index: -1;
+}
+.dark{
+    background-color:rgba(0, 0,0,0.75);
+    color: white;
+    padding: 7rem 2rem;
+}
+.fixed-bacground h3{
+    margin-bottom: 2rem;
+
+}
+.fixed-bacground p{
+    margin-top: 1.5rem;
+}
+/*----Client section--*/
+.clients img{
+    width: 100%;
+    border-radius: 50%;
+}
+blockquote svg.svg-inline--fa{
+    color: #1ebba3;
+    margin: 1rem;
+}
+.clients-hr{
+    border-top:.05rem solid #1ebba3;
+
+}
+/*----Contact section--*/
+footer{
+    background-color:#40474e ;
+    color: white;
+    padding: 2rem 0 2rem;
+    margin-top: 1rem;
+}
+footer img{
+    height: 3rem;
+    margin: 1.5rem 0;
+}
+footer a{
+    color: white;
+}
+footer svg.svg-inline--fa{
+    font-size: 1.6rem;
+    margin: 1.2rem .5rem 0 0;
+}
+footer svg.svg-inline--fa:hover{
+    color:#1ebba3!important;
+}
+hr.socket{
+    width: 100%;
+    border-top: .2rem solid #666b71;
+    margin-top: 3rem;
+
+}
+/*----Media Queries section--*/
+@media (max-width:767px){
+    .caption h1{
+        font-size: 2.3rem;
+        letter-spacing: .1rem;
+        padding-bottom: .5rem;
+    }
+    .caption h3{
+        font-size: 1.2rem;
+        padding-bottom: 1.2rem;
+    }
+    .btn-lg{
+        padding: .5rem 1rem;
+        font-size: 1rem;
+    } 
+    .narrow h1{
+        font-size: 1.5rem;
+    
+    }
+    .clients img{
+        max-width: 50%;
+        display: block;
+        margin:0 auto;
+    }
+}
+
+
+
+/*============ BOOTSTRAP BREAK POINTS:
+
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+=============*/
